tests/source/typing/bad/testfile-undef_struct-2.c

int f(struct A *s) { return 0; }
int main() { return 0; }
